--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A note taking app" />
+  <meta name="description" content="React app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Note Taker</title>
+  <title>React App</title>
 </head>
 
 <body>
